test/Fail/Issue3002.err
Issue3002.agda:19.9-13: error: [UnequalTerms]
The terms
  (λ ()) x
and
  f x
are not equal at type ⊥
when checking that the expression refl has type
(suc zero ≤? zero) ≡ f
